Replaced project with one created in VS 2017 targeting Standard 1.3. Refactored the Core Sample that is now using the NuGet Package. There is a known issue trying to reuse the package with .net Framework, causing an error trying to load the System.net.http assembly.

--- a/Src/BraviaControl.CoreSample/BraviaControl.CoreSample.csproj
+++ b/Src/BraviaControl.CoreSample/BraviaControl.CoreSample.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>BraviaControl.CoreSample</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>BraviaControl.CoreSample</PackageId>
@@ -11,13 +10,8 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\BraviaControl\BraviaControl.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="BraviaControl.Core" Version="1.0.1" />
     <PackageReference Include="Microsoft.NETCore.App" Version="1.1.0" />
   </ItemGroup>
-
 </Project>
