--- a/Src/BraviaControl/BraviaControl.csproj
+++ b/Src/BraviaControl/BraviaControl.csproj
@@ -4,20 +4,20 @@
     <TargetFramework>netstandard1.3</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>BraviaControl.Core</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>Manuel Salvatori</Authors>
     <Company />
     <Product>BraviaControl</Product>
     <Description>Sony BRAVIA remote control API client for .NET Standard 1.3 - Fork from https://github.com/mayuki/BraviaControl</Description>
-    <AssemblyVersion>1.0.0.1</AssemblyVersion>
-    <FileVersion>1.0.0.1</FileVersion>
+    <AssemblyVersion>1.0.0.2</AssemblyVersion>
+    <FileVersion>1.0.0.2</FileVersion>
     <RootNamespace>BraviaControl</RootNamespace>
     <AssemblyName>BraviaControl</AssemblyName>
     <PackageLicenseUrl>https://github.com/manuelsalvatori/BraviaControl/blob/master/LICENSE</PackageLicenseUrl>
     <Copyright>Copyright 2017 Manuel Salvatori</Copyright>
     <PackageProjectUrl>https://github.com/manuelsalvatori/BraviaControl</PackageProjectUrl>
     <PackageTags>BRAVIA API, CORE, STANDARD13,  UWP</PackageTags>
-    <PackageReleaseNotes>New release targeting .net Standard 1.3</PackageReleaseNotes>
+    <PackageReleaseNotes>Added Interface to facilitate testing in cusumer client applications.</PackageReleaseNotes>
     <NeutralLanguage />
   </PropertyGroup>
 
